--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.10"
+    "vue": "^3.5.10",
+    "vue-draggable-plus": "^0.5.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
